--- a/templates/Python.xml
+++ b/templates/Python.xml
@@ -18,4 +18,9 @@
       <option name="Python" value="true" />
     </context>
   </template>
+  <template name="pdb" value="import pdb; pdb.set_trace()" description="Drop pdb here" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="Python" value="true" />
+    </context>
+  </template>
 </templateSet>
